Finalizado layout tela de login

--- a/www/pages/login/login.html
+++ b/www/pages/login/login.html
@@ -1,5 +1,22 @@
 <ion-view>
-	<ion-content>
-		
-	</ion-content>
+  <ion-content class="login-container">
+
+    <div class="list login-page">
+      <div class="logo">
+        <img src="img/logo.png">
+      </div>
+      <form>
+        <label class="item item-input no-bg-color">
+          <label></label>
+          <input type="text" placeholder="Login">
+        </label>
+        <label class="item item-input no-bg-color">
+          <input type="password" placeholder="Senha">
+        </label>
+        <input type="button" value="Acessar" class="button button-block button-assertive activated">
+      </form>
+    </div>
+    </ion-list>
+
+  </ion-content>
 </ion-view>
