--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
         <title></title>
         <link href="lib/ionic/css/ionic.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <link href="pages/login/login.css" rel="stylesheet">
         <script src="lib/ionic/js/ionic.bundle.js"></script>
         <script src="js/app.js"></script>
         <script src="pages/login/login.js"></script>
@@ -14,7 +15,6 @@
     <body ng-app="starter">
         <ion-side-menus>
             <ion-side-menu-content>
-                <ion-nav-bar class="bar-positive"></ion-nav-bar>
                 <ion-nav-view></ion-nav-view>
             </ion-side-menu-content>
         </ion-side-menus>
