--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
         <link href="lib/ionic/css/ionic.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="pages/login/login.css" rel="stylesheet">
+        <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        
         <script src="lib/ionic/js/ionic.bundle.js"></script>
         <script src="js/app.js"></script>
         <script src="pages/login/login.js"></script>
