--- a/www/index.html
+++ b/www/index.html
@@ -10,18 +10,19 @@
         <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
         <script src="lib/ionic/js/ionic.bundle.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/services.js"></script>
         <script src="pages/login/login.js"></script>
+        <script src="js/app.js"></script>
         <script src="cordova.js"></script>
     </head>
     <body ng-app="starter">
-        <ion-side-menus>
-            <ion-side-menu-content>
-                <ion-nav-view></ion-nav-view>
-            </ion-side-menu-content>
-        </ion-side-menus>
+      <ion-side-menus>
+          <ion-side-menu-content>
+              <ion-nav-view></ion-nav-view>
+          </ion-side-menu-content>
+      </ion-side-menus>
 
-        <script src="./bower_components/stamplay-js-sdk/dist/stamplay.min.js"></script>
-        <script> Stamplay.init('cuidovc'); </script>
+      <script src="lib/stamplay-js-sdk/dist/stamplay.min.js"></script>
+      <script> Stamplay.init('cuidovc'); </script>
     </body>
 </html>
