--- a/www/pages/login/login.html
+++ b/www/pages/login/login.html
@@ -1,25 +1,27 @@
 <ion-view>
   <ion-content class="login-container" scroll="false">
-
     <div class="login-page">
       <div class="logo">
         <img src="img/logo.png">
       </div>
-      <form ng-submit="submit()">
-        <label class="item item-input no-bg-color">
-          <span class="input-label">
-            <i class="fa fa-user" aria-hidden="true"></i>
-          </span>
-          <input type="text" placeholder="Login">
-        </label>
-        <label class="item item-input no-bg-color">
-          <span class="input-label">
-            <i class="fa fa-unlock-alt" aria-hidden="true"></i>
-          </span>
-          <input type="password" placeholder="Senha">
-        </label>
-        <input type="submit" value="Acessar" class="button button-block button-assertive activated">
-      </form>
+
+      <label class="item item-input no-bg-color">
+        <span class="input-label"><i class="fa fa-user gray" aria-hidden="true"></i></span>
+
+        <input type="text" placeholder="Login" ng-model="account.user.email">
+      </label>
+
+      <label class="item item-input no-bg-color">
+        <span class="input-label"><i class="fa fa-unlock-alt gray" aria-hidden="true"></i></span>
+
+        <input type="password" ng-model="account.user.password" placeholder="Senha">
+      </label>
+
+      <button class="button button-block button-assertive activated" ng-class="account.clicked ? 'activated' : ''" ng-click="account.login()">Acessar</button>
+
+      <p class="text-center">
+        ou crie sua <b><a href="#">conta</a></b>
+      </p>
     </div>
   </ion-content>
 </ion-view>
