--- a/www/index.html
+++ b/www/index.html
@@ -3,26 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title></title>
+        <title>cuido.vc</title>
         <link href="lib/ionic/css/ionic.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="pages/login/login.css" rel="stylesheet">
+        <link href="pages/signup/signup.css" rel="stylesheet">
         <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-        <script src="lib/ionic/js/ionic.bundle.js"></script>
-        <script src="js/services.js"></script>
-        <script src="pages/login/login.js"></script>
-        <script src="js/app.js"></script>
-        <script src="cordova.js"></script>
     </head>
     <body ng-app="starter">
-      <ion-side-menus>
-          <ion-side-menu-content>
-              <ion-nav-view></ion-nav-view>
-          </ion-side-menu-content>
-      </ion-side-menus>
+      <ion-nav-view></ion-nav-view>
 
       <script src="lib/stamplay-js-sdk/dist/stamplay.min.js"></script>
       <script> Stamplay.init('cuidovc'); </script>
+
+      <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <script src="js/services.js"></script>
+      <script src="js/auth_controller.js"></script>
+
+      <script src="pages/client/home/home.js"></script>
+
+      <script src="js/app.js"></script>
+      <script src="cordova.js"></script>
     </body>
 </html>
