Fixes: #1 and #2 - added button to menu - updated services and state control flow in app.js to get working   with validation before access page.
- removed Main<unused>Controller :shipit:

--- a/www/pages/client/home/home.html
+++ b/www/pages/client/home/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Home">
   <ion-content>
-    <h2 class="text-center">Olá, bem vindo! {{name}}</h2>
+    <h4 class="text-center">Olá, bem vindo! <b>{{user.name}}</b></h4>
   </ion-content>
 </ion-view>
