--- a/www/pages/login/login.html
+++ b/www/pages/login/login.html
@@ -5,19 +5,21 @@
         <img src="img/logo.png">
       </div>
 
-      <label class="item item-input no-bg-color">
+      <label class="item item-input no-bg-color margin ">
         <span class="input-label"><i class="fa fa-envelope gray" aria-hidden="true"></i></span>
 
-        <input type="text" placeholder="Email" ng-model="account.user.email">
+        <input type="text" class="try" placeholder="Email" ng-model="account.user.email">
       </label>
 
-      <label class="item item-input no-bg-color">
+      <label class="item item-input no-bg-color margin">
         <span class="input-label"><i class="fa fa-unlock-alt gray" aria-hidden="true"></i></span>
 
-        <input type="password" ng-model="account.user.password" placeholder="Senha">
+        <input type="password" class="try" ng-model="account.user.password" placeholder="Senha">
       </label>
 
-      <button class="button button-block button-assertive activated" ng-class="account.clicked ? 'activated' : ''" ng-click="account.login()">Acessar</button>
+      <div class="margin">
+        <button class="button button-block button-assertive activated" ng-click="account.login()">Acessar</button>
+      </div>
 
       <p class="text-center">
         ou crie sua <b><a ui-sref="signup">conta</a></b>
